--- a/Medi-Give/package.json
+++ b/Medi-Give/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
     "autoprefixer": "^10.4.23",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
@@ -26,6 +28,7 @@
     "react-router-dom": "^7.12.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^3.4.17",
+    "three": "^0.182.0",
     "web-vitals": "^5.1.0"
   },
   "devDependencies": {
